[metrics] add metrics
